--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,4 @@
 <app-bonjour></app-bonjour>
 <app-bonjour-avec-prenom [prenom]='"Julien"'></app-bonjour-avec-prenom>
 <app-bonjour-avec-prenom [prenom]='"Igor"'></app-bonjour-avec-prenom>
-<app-collegue [col] = 'unObjetFourni'></app-collegue>
+<app-collegue></app-collegue>
